<resources>
    <string name="app_name">Protein Buddy</string>
    <string name="txtboxUsername">Username</string>
    <string name="txtboxPassword">Password</string>
    <string name="loginBtn">Login</string>
    <string name="loginAttempts">Incorrect attempts remaining:</string>
    <string name="lockedOut">Account is now locked. Contact Tasha for permission to retry.</string>
    <string name="p1">Tofu</string>
    <string name="p1Recipes">Tofu Recipes</string>
    <string name="p2">Chickpeas</string>
    <string name="p2r1">Easy Hummus Recipe</string>
    <string name="p2Recipes">Chickpea Recipes</string>
    <string name="p4">Eggs</string>
    <string name="p4r1_2">Spinach and Feta Quiche</string>
    <string name="p4Recipes">Egg Recipes</string>
    <string name="recipesClickList">Select the recipe from the list below:</string>
    <string name="allRecipes">View All Recipes</string>
    <string name="protienRecipes">View By Protein</string>
    <string name="p1r1">Marinated Tofu Recipe</string>
    <string name="ingredients">Ingredients:</string>
    <string name="directions">Directions:</string>
    <string name="proteinButton">Click Here to Calculate Total Protein</string>
    <string name="contentDiscription">Protein Buddy Logo</string>
    <string name="settings_name">Settings</string>
    <string name="logout_name">Log Out</string>
    <string name="title_activity_settings">Settings</string>
    <string name="editTxtUsername">Username</string>
    <string name="create_account_btn">Create Account</string>
    <string name="back_btn">Back</string>
    <string name="btnIngredientsList">Click here to view ingredients</string>
    <string name="shopping_list_header">Your shopping List:</string>
    <string name="shopping_list_menu">Shopping List</string>
    <string name="my_account_header">My Account</string>
    <string name="btn_update">Update</string>
    <string name="btn_edit">Edit</string>
    <string name="action_view_account">View Account</string>
    <string name="btn_delete_account">Delete Account</string>
    <string name="btn_main_menu">Main Menu</string>
    <string name="recipes_by_protein_hint">Click on your desired protein</string>
    <string name="recipes_hint">Click on your desired recipe</string>
    <string name="ingredients_hint">Click on any item to add to your shopping list</string>
    <string name="shopping_list_hint">Click on any item to remove</string>

    <!--the style below should of been created as a string value, however when i change it, -->
    <!--it brings up an error in the run tasks. this does not affect the apps ability to run, -->
    <!--however i have left it as it is for the moment. -->


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
