<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenu"
    android:background="@color/iconBackground">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar"></include>

    <ImageView
        android:id="@+id/imageMainMenu"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/contentDiscription"
        app:srcCompat="@drawable/hat" />

    <Button
        android:id="@+id/btnProteinRecipes"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/protienRecipes"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/imageMainMenu"
        android:background="@drawable/gradient_button_1"
        android:textColor="@color/iconBackground"
        android:textSize="18sp"
        />

    <Button
        android:id="@+id/btnAllRecipes"
        android:layout_width="300dp"
        android:layout_height="82dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/allRecipes"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btnProteinRecipes"
        android:background="@drawable/gradient_button_1"
        android:textColor="@color/iconBackground"
        android:textSize="18sp"
        />

</RelativeLayout>