<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChickpeaRecipes"
    android:background="@color/iconBackground">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar"></include>

    <ImageView
        android:id="@+id/p2RecipesImage"
        android:layout_width="80dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/contentDiscription"
        app:srcCompat="@drawable/hat"
        android:layout_below="@id/app_bar"/>

    <TextView
        android:id="@+id/txtvP2Recipes"
        android:layout_width="285dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/p2Recipes"
        android:textAlignment="center"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/p2RecipesImage"
        android:textColor="@color/iconDetails"/>

    <ListView
        android:id="@+id/chickpeaRecipesList"
        android:layout_width="316dp"
        android:layout_height="300dp"
        android:layout_below="@id/txtvP2Recipes"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:textColor="@color/iconDetails"
        tools:layout_editor_absoluteX="47dp"
        tools:layout_editor_absoluteY="294dp" />

    <TextView
        android:id="@+id/subText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/chickpeaRecipesList"
        android:layout_centerHorizontal="true"
        android:text="@string/recipes_hint"
        android:layout_marginTop="40dp"
        android:textSize="15sp"
        android:textStyle="italic"
        android:textColor="@color/iconDetails"/>

</RelativeLayout>